the team pictures has been fixed and aligned properly

--- a/src/App.css
+++ b/src/App.css
@@ -107,15 +107,6 @@
     }
   }
 
-  .teamImg {
-    width: 5rem;
-    height: 5rem;
-  }
-  .team-section {
-    flex-direction: column;
-    margin-top: -2rem;
-    margin-left: 2rem;
-  }
   .our-values {
     row-gap: 0.2rem;
   }
@@ -278,31 +269,7 @@
     padding: 5px 20px;
     text-transform: capitalize;
   }
-  .teamImg {
-    border-radius: 50%;
-    margin-bottom: 10px;
-    width: 5rem;
-    height: 5rem;
-  }
-  .team-section {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 2rem;
-    margin-top: 0.1rem;
-    margin-left: auto;
-    padding: 1rem;
-  }
-
-  .team-section p {
-    font-size: 0.8rem;
-    line-height: 1.2;
-    margin: 0 1rem;
-    color: dodgerblue;
-    text-align: start;
-  }
-
+  
   .abouthead {
     font-size: 1.2rem;
     line-height: 1.5;
@@ -493,8 +460,7 @@
     font-weight: 100 !important;
     font-size: 1.3rem !important;
     line-height: 2.1rem !important;
-    margin-bottom: 2rem;
-    padding: 1rem 1rem 2rem 1rem;
+    padding: 1rem;
     hyphens: auto;
     animation: Lead 4s ease-in;
   }
@@ -517,28 +483,7 @@
     padding: 5px 20px;
     text-transform: capitalize;
   }
-  .teamImg {
-    border-radius: 50%;
-    margin-bottom: 10px;
-    width: 15rem;
-    height: 15rem;
-  }
-  .team-section {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 2rem;
-    margin-top: -3.5rem;
-    padding: 2rem;
-  }
 
-  .team-section p {
-    font-size: 0.8rem;
-    line-height: 1.2;
-    margin: 0 1rem;
-    color: dodgerblue;
-    text-align: start;
-  }
  .our-values {
     height: 20rem;
   }
